@@ -3,6 +3,8 @@ git-annex (4.20130628) UNRELEASED; urgency=low
   * --all: New switch that makes git-annex operate on all data stored
     in the git annex, including old versions of files. Supported by
     fsck, get, move, copy.
+  * --unused: New switch that makes git-annex operate on all data found
+    by the last run of git annex unused. Supported by fsck, get, move, copy.
   * get, move, copy: Can now be run in a bare repository,
     like fsck already could. --all is enabled automatically in this case.
   * webapp: Fix ssh setup with nonstandard port, broken in last release.
